finished other things but game state

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
         <script type="text/javascript" src="./js/states/PreloadState.js"></script>
         <script type="text/javascript" src="./js/states/BootState.js"></script>
         <script type="text/javascript" src="./js/states/MenuState.js"></script>
-        <script type="text/javascript" src="./js/states/JoinGameState.js"></script>
-        <script type="text/javascript" src="./js/states/HowToPlayState.js"></script>
+        <script type="text/javascript" src="./js/states/SetConditionsState.js"></script>
+        <script type="text/javascript" src="./js/states/AboutState.js"></script>
         <script type="text/javascript" src="./js/main.js"></script>
       </div>
     </body>
