--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <body>
       <div id="main">
         <script type="text/javascript" src="phaser.min.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
+        <!-- <script src="/socket.io/socket.io.js"></script> -->
         <script src="/@orange-games/phaser-input/build/phaser-input.js"></script>
         <script type="text/javascript" src="./js/states/GameState.js"></script>
         <script type="text/javascript" src="./js/states/PreloadState.js"></script>
