--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
     	<link rel = "stylesheet" type = "text/css" href = "/style.css" />
         <link href="https://fonts.googleapis.com/css?family=VT323|Megrim|Press+Start+2P" rel="stylesheet">
-      <title>Super Asteroid Battle</title>
+      <title>Hurricane Sim</title>
     </head>
     <body>
       <div id="main">
