converted phaser front end

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,12 @@
 <html>
     <head>
     	<link rel = "stylesheet" type = "text/css" href = "/style.css" />
-        <link href="https://fonts.googleapis.com/css?family=VT323|Megrim|Press+Start+2P" rel="stylesheet">
       <title>Hurricane Sim</title>
     </head>
     <body>
       <div id="main">
         <script type="text/javascript" src="phaser.min.js"></script>
-        <script type="text/javascript" src="storm_stats.js"></script>
+        <script type="text/javascript" src="storm_stats_converted.js"></script>
         <script src="/@orange-games/phaser-input/build/phaser-input.js"></script>
         <script type="text/javascript" src="./js/states/GameState.js"></script>
         <script type="text/javascript" src="./js/states/PreloadState.js"></script>
