Added backgound color and links to html page

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<link rel = "stylesheet" type = "text/css" href = "/style.css" />
+      <link rel = "stylesheet" type = "text/css" href = "/style.css" />
+      <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
       <title>Hurricane Sim</title>
     </head>
     <body>
@@ -18,4 +19,7 @@
         <script type="text/javascript" src="./js/main.js"></script>
       </div>
     </body>
+    <footer>
+        <p><a href="https://github.com/HackTheDeep/Hurricane-Cousteau">Team Hurricane Cousteau</a> <br /> <a href="https://twitter.com/search?q=%23HacktheDeep&src=tyah&lang=en">#HackTheDeep</a> - <a href="https://www.amnh.org/">American Museum of Natural History</a></p>
+    </footer>
 </html>
